--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+div.invalid, span.invalid{
+	color: orangered !important;
+	width: 100%;
+}
+.title{
+	text-align: center;
+	width: 100%;
+	height: 50px;
+	margin-bottom: 10px;
+	color: #fff;
+}
