--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,16 +22,10 @@
       <form  [formGroup]="loginForm" (submit)="login()" class="form-horizontal" novalidate>
         <div class="form-group">
           <div class="col-md-12">
+            <label class="label label-default">Registration or Unique login ID</label>
             <input type="text" formControlName="email" [class.invalid]="submitted && !loginForm.controls.email.valid"
-                   class="form-control" placeholder="Username or registration/student number" [(ngModel)]="model.username" />
-            <div class="invalid" *ngIf="submitted && !loginForm.controls.email.valid">Username is Required</div>
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="col-md-12">
-            <input type="password" formControlName="password" class="form-control" [(ngModel)]="model.password"
-                   [class.invalid]="submitted && !loginForm.controls.password.valid" placeholder="Password"/>
-            <div class="invalid" *ngIf="submitted && !loginForm.controls.password.valid">Password is Required</div>
+                   class="form-control" placeholder="registration or student number" [(ngModel)]="model.username" />
+            <div class="invalid" *ngIf="submitted && !loginForm.controls.email.valid">This field is Required</div>
           </div>
         </div>
         <div class="form-group">
