--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,11 +14,12 @@
 			<li class="xn-openable">
 				<a href="#"><span class="fa fa-files-o"></span> <span class="xn-text">Collection</span></a>
 				<ul class="animated zoomIn">
-					<li><a routerLink="courses"><span class="fa fa-book"></span> Courses</a></li>
 					<li><a routerLink="programmes"><span class="fa fa-book"></span> Departments and Programmes</a></li>
+					<li><a routerLink="courses"><span class="fa fa-book"></span> Courses</a>
 					<li><a routerLink="lecturers"><span class="fa fa-user"></span> Lecturers</a></li>
 					<li><a routerLink="rooms"><span class="fa fa-building-o"></span> Lecture Rooms and Offices</a></li>
 					<li><a routerLink="students"><span class="fa fa-users"></span> Students</a></li>
+					<li><a routerLink="admins"><span class="fa fa-users"></span> Admins</a></li>
 				</ul>
 			</li>
 			<li class="">
