--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -2,7 +2,7 @@
 <div class="row">
 	<div class="col-md-12">
 
-		<app-alert></app-alert>
+		<!--<app-alert></app-alert>-->
 
 		<div class="row" *ngIf="loading">
 			<div class="col-md-12">
