--- a/src/app/timetables/timetables.component.html
+++ b/src/app/timetables/timetables.component.html
@@ -20,13 +20,15 @@
 							<h2>TimeTable</h2>
 							<p>Upload new</p>
 							<div class="form-group">
-								<label class="col-md-3 control-label">Title (Course)</label>
+								<label class="col-md-3 control-label">Programme</label>
 								<div class="col-md-9">
-									<div class="input-group">
-										<span class="input-group-addon"><span class="fa fa-edit"></span></span>
-										<input [ngModel]="modalTimetable.title" type="text" class="form-control" formControlName="title" [class.invalid]="!addTableForm.controls.title.valid" />
-									</div>
-									<span *ngIf="tableSubmitted && !addTableForm.controls.title.valid" class="invalid">Title is required</span>
+									<select title="stores" [class.invalid]="!addCourseForm.controls.programme_id.valid" [ngModel]="modalTimetable.programme_id" formControlName="programme_id" class="form-control">
+										<option value="0" selected="selected" disabled >---------------------</option>
+										<option *ngFor="let program of programmes" [ngValue]="program.id" >
+											{{ program.name }}
+										</option>
+									</select>
+									<span *ngIf="tableSubmitted && !addTableForm.controls.programme_id.valid" class="invalid">Select a programme</span>
 								</div>
 							</div>
 							<div class="form-group">
