--- a/src/app/notices/notices.component.html
+++ b/src/app/notices/notices.component.html
@@ -79,8 +79,10 @@
                     <strong>{{ note.programme_id }}</strong>
 					<strong>{{ note.title }}</strong>
 					<b>Post Date: {{ note.post_date }}</b>
+					<i style="font-size: 32px; color: red" class="fa fa-map-marker"></i>
 				</div>
 				<div class="image">
+
 					<p style="padding: 15px; ">
 						{{ note.descriptiion }}
 					</p>
@@ -94,6 +96,7 @@
 				<div class="meta">
 					<strong>Tuition</strong>
 					<span>wed 23, 3 2017</span>
+					<i style="font-size: 32px; color: red" class="fa fa-map-marker"></i>
 				</div>
 				<div class="image">
 					<p style="padding: 15px; ">
@@ -108,6 +111,7 @@
 				<div class="meta">
 					<strong>Tuition</strong>
 					<span>wed 23, 3 2017</span>
+					<i style="font-size: 32px; color: red" class="fa fa-map-marker"></i>
 				</div>
 				<div class="image">
 					<p style="padding: 15px; ">
@@ -122,6 +126,7 @@
 				<div class="meta">
 					<strong>Tuition</strong>
 					<span>wed 23, 3 2017</span>
+					<i style="font-size: 32px; color: red" class="fa fa-map-marker"></i>
 				</div>
 				<div class="image">
 					<p style="padding: 15px; ">
@@ -136,6 +141,7 @@
 				<div class="meta">
 					<strong>Tuition</strong>
 					<span>wed 23, 3 2017</span>
+					<i style="font-size: 32px; color: red" class="fa fa-map-marker"></i>
 				</div>
 				<div class="image">
 					<p style="padding: 15px; ">
@@ -150,6 +156,7 @@
 				<div class="meta">
 					<strong>Tuition</strong>
 					<span>wed 23, 3 2017</span>
+					<i style="font-size: 32px; color: red" class="fa fa-map-marker"></i>
 				</div>
 				<div class="image">
 					<p style="padding: 15px; ">
@@ -164,6 +171,7 @@
 				<div class="meta">
 					<strong>Tuition</strong>
 					<span>wed 23, 3 2017</span>
+					<i style="font-size: 32px; color: red" class="fa fa-map-marker"></i>
 				</div>
 				<div class="image">
 					<p style="padding: 15px; ">
@@ -178,6 +186,7 @@
 				<div class="meta">
 					<strong>Tuition</strong>
 					<span>wed 23, 3 2017</span>
+					<i style="font-size: 32px; color: red" class="fa fa-map-marker"></i>
 				</div>
 				<div class="image">
 					<p style="padding: 15px; ">
