--- a/src/app/timetables/timetables.component.html
+++ b/src/app/timetables/timetables.component.html
@@ -82,9 +82,9 @@
 		</div>
 		<div class="gallery" id="links">
 
-			<a *ngFor="let table of tables" class="gallery-item" title="{{ table.title }}" data-gallery>
+			<a *ngFor="let table of tables" href="uploads/timetables/{{ table.file_name }}" class="gallery-item" title="{{ table.title }}" data-gallery>
 				<div class="image">
-					<img src="uploads/timetables/{{ table.file_name }}" alt="{{ table.file_name }}"/>
+					<img src="assets/icons/Acrobat-Professional.png" alt="{{ table.file_name }}"/>
 					<ul class="gallery-item-controls">
 						<li style="background: darkred" (click)="deleteTable(table)"><span><i class="fa fa-trash-o" style="color: #fff;"></i></span></li>
 					</ul>
@@ -96,156 +96,81 @@
 				</div>
 			</a>
 
-			<a class="gallery-item" title="Music picture 1" data-gallery>
+			<a class="gallery-item" href="assets/icons/Acrobat-Professional.png" title="BSSE 2018" data-gallery>
 				<div class="image">
-					<img src="assets/lib/theme/images/gallery/music-1.jpg" alt="Music picture 1"/>
+					<img src="assets/icons/Acrobat-Professional.png" alt="BSSE 2018"/>
 					<ul class="gallery-item-controls">
 						<li style="background: darkred" (click)="deleteTable(tables[0])"><span><i class="fa fa-trash-o" style="color: #fff;"></i></span></li>
 					</ul>
 				</div>
 				<div class="meta">
-					<strong>Music picture 1</strong>
-					<span>Other description</span>
+					<strong>BSSE</strong>
+					<span>2018 SM-2</span>
 				</div>
 			</a>
 
-			<a class="gallery-item" href="assets/lib/theme/images/gallery/girls-1.jpg" title="Girls Image 1" data-gallery>
+			<a class="gallery-item" href="assets/icons/Acrobat-Professional.png" title="BSSE 2018" data-gallery>
 				<div class="image">
-					<img src="assets/lib/theme/images/gallery/girls-1.jpg" alt="Girls Image 1"/>
+					<img src="assets/icons/Acrobat-Professional.png" alt="BSSE 2018"/>
 					<ul class="gallery-item-controls">
-						<li><label class="check"><input type="checkbox" class="icheckbox"/></label></li>
-						<li><span class="gallery-item-remove"><i class="fa fa-times"></i></span></li>
+						<li style="background: darkred" (click)="deleteTable(tables[0])"><span><i class="fa fa-trash-o" style="color: #fff;"></i></span></li>
 					</ul>
 				</div>
 				<div class="meta">
-					<strong>Girls image 1</strong>
-					<span>Description</span>
+					<strong>BSSE</strong>
+					<span>2018 SM-2</span>
 				</div>
 			</a>
 
-			<a class="gallery-item" href="assets/lib/theme/images/gallery/nature-2.jpg" title="Nature Image 2" data-gallery>
+			<a class="gallery-item" href="assets/icons/Acrobat-Professional.png" title="BSSE 2018" data-gallery>
 				<div class="image">
-					<img src="assets/lib/theme/images/gallery/nature-2.jpg" alt="Nature Image 2"/>
+					<img src="assets/icons/Acrobat-Professional.png" alt="BSSE 2018"/>
 					<ul class="gallery-item-controls">
-						<li><label class="check"><input type="checkbox" class="icheckbox"/></label></li>
-						<li><span class="gallery-item-remove"><i class="fa fa-times"></i></span></li>
+						<li style="background: darkred" (click)="deleteTable(tables[0])"><span><i class="fa fa-trash-o" style="color: #fff;"></i></span></li>
 					</ul>
 				</div>
 				<div class="meta">
-					<strong>Nature image 2</strong>
-					<span>Description</span>
+					<strong>BSSE</strong>
+					<span>2018 SM-2</span>
 				</div>
 			</a>
 
-			<a class="gallery-item" href="assets/lib/theme/images/gallery/space-1.jpg" title="Space picture 1" data-gallery>
+			<a class="gallery-item" href="assets/icons/Acrobat-Professional.png" title="BSSE 2018" data-gallery>
 				<div class="image">
-					<img src="assets/lib/theme/images/gallery/space-1.jpg" alt="Space picture 1"/>
+					<img src="assets/icons/Acrobat-Professional.png" alt="BSSE 2018"/>
 					<ul class="gallery-item-controls">
-						<li><label class="check"><input type="checkbox" class="icheckbox"/></label></li>
-						<li><span class="gallery-item-remove"><i class="fa fa-times"></i></span></li>
+						<li style="background: darkred" (click)="deleteTable(tables[0])"><span><i class="fa fa-trash-o" style="color: #fff;"></i></span></li>
 					</ul>
 				</div>
 				<div class="meta">
-					<strong>Space picture 1</strong>
-					<span>Other description</span>
+					<strong>BSSE</strong>
+					<span>2018 SM-2</span>
 				</div>
 			</a>
 
-			<a class="gallery-item" href="assets/lib/theme/images/gallery/music-2.jpg" title="Music picture 2" data-gallery>
+			<a class="gallery-item" href="assets/icons/Acrobat-Professional.png" title="BSSE 2018" data-gallery>
 				<div class="image">
-					<img src="assets/lib/theme/images/gallery/music-2.jpg" alt="Music picture 2"/>
+					<img src="assets/icons/Acrobat-Professional.png" alt="BSSE 2018"/>
 					<ul class="gallery-item-controls">
-						<li><label class="check"><input type="checkbox" class="icheckbox"/></label></li>
-						<li><span class="gallery-item-remove"><i class="fa fa-times"></i></span></li>
+						<li style="background: darkred" (click)="deleteTable(tables[0])"><span><i class="fa fa-trash-o" style="color: #fff;"></i></span></li>
 					</ul>
 				</div>
 				<div class="meta">
-					<strong>Music picture 2</strong>
-					<span>Other description</span>
+					<strong>BSSE</strong>
+					<span>2018 SM-2</span>
 				</div>
 			</a>
 
-			<a class="gallery-item" href="assets/lib/theme/images/gallery/nature-3.jpg" title="Nature Image 3" data-gallery>
+			<a class="gallery-item" href="assets/icons/Acrobat-Professional.png" title="BSSE 2018" data-gallery>
 				<div class="image">
-					<img src="assets/lib/theme/images/gallery/nature-3.jpg" alt="Nature Image 3"/>
+					<img src="assets/icons/Acrobat-Professional.png" alt="BSSE 2018"/>
 					<ul class="gallery-item-controls">
-						<li><label class="check"><input type="checkbox" class="icheckbox"/></label></li>
-						<li><span class="gallery-item-remove"><i class="fa fa-times"></i></span></li>
+						<li style="background: darkred" (click)="deleteTable(tables[0])"><span><i class="fa fa-trash-o" style="color: #fff;"></i></span></li>
 					</ul>
 				</div>
 				<div class="meta">
-					<strong>Nature image 3</strong>
-					<span>Description</span>
-				</div>
-			</a>
-
-			<a class="gallery-item" href="assets/lib/theme/images/gallery/nature-5.jpg" title="Nature Image 5" data-gallery>
-				<div class="image">
-					<img src="assets/lib/theme/images/gallery/nature-5.jpg" alt="Nature Image 5"/>
-					<ul class="gallery-item-controls">
-						<li><label class="check"><input type="checkbox" class="icheckbox"/></label></li>
-						<li><span class="gallery-item-remove"><i class="fa fa-times"></i></span></li>
-					</ul>
-				</div>
-				<div class="meta">
-					<strong>Nature image 5</strong>
-					<span>Description</span>
-				</div>
-			</a>
-
-			<a class="gallery-item" href="assets/lib/theme/images/gallery/nature-6.jpg" title="Nature Image 6" data-gallery>
-				<div class="image">
-					<img src="assets/lib/theme/images/gallery/nature-6.jpg" alt="Nature Image 6"/>
-					<ul class="gallery-item-controls">
-						<li><label class="check"><input type="checkbox" class="icheckbox"/></label></li>
-						<li><span class="gallery-item-remove"><i class="fa fa-times"></i></span></li>
-					</ul>
-				</div>
-				<div class="meta">
-					<strong>Nature image 6</strong>
-					<span>Description</span>
-				</div>
-			</a>
-
-			<a class="gallery-item" href="assets/lib/theme/images/gallery/girls-3.jpg" title="Girls Image 3" data-gallery>
-				<div class="image">
-					<img src="assets/lib/theme/images/gallery/girls-3.jpg" alt="Girls Image 3"/>
-					<ul class="gallery-item-controls">
-						<li><label class="check"><input type="checkbox" class="icheckbox"/></label></li>
-						<li><span class="gallery-item-remove"><i class="fa fa-times"></i></span></li>
-					</ul>
-				</div>
-				<div class="meta">
-					<strong>Girls image 3</strong>
-					<span>Description</span>
-				</div>
-			</a>
-
-			<a class="gallery-item" href="assets/lib/theme/images/gallery/nature-7.jpg" title="Nature Image 7" data-gallery>
-				<div class="image">
-					<img src="assets/lib/theme/images/gallery/nature-7.jpg" alt="Nature Image 7"/>
-					<ul class="gallery-item-controls">
-						<li><label class="check"><input type="checkbox" class="icheckbox"/></label></li>
-						<li><span class="gallery-item-remove"><i class="fa fa-times"></i></span></li>
-					</ul>
-				</div>
-				<div class="meta">
-					<strong>Nature image 7</strong>
-					<span>Description</span>
-				</div>
-			</a>
-
-			<a class="gallery-item" href="assets/lib/theme/images/gallery/music-5.jpg" title="Music picture 5" data-gallery>
-				<div class="image">
-					<img src="assets/lib/theme/images/gallery/music-5.jpg" alt="Music picture 5"/>
-					<ul class="gallery-item-controls">
-						<li><label class="check"><input type="checkbox" class="icheckbox"/></label></li>
-						<li><span class="gallery-item-remove"><i class="fa fa-times"></i></span></li>
-					</ul>
-				</div>
-				<div class="meta">
-					<strong>Music picture 5</strong>
-					<span>Other description</span>
+					<strong>BSSE</strong>
+					<span>2018 SM-2</span>
 				</div>
 			</a>
 
